recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:1: error: not found: value void
void snowSquare (int levels, double length) {
^SquareKoch:1: error: not found: value int
void snowSquare (int levels, double length) {
                 ^SquareKoch:1: error: not found: value double
void snowSquare (int levels, double length) {
                             ^SquareKoch:2: error: not found: value squareSide
    squareSide(levels, length);
    ^SquareKoch:2: error: not found: value levels
    squareSide(levels, length);
               ^SquareKoch:2: error: not found: value length
    squareSide(levels, length);
                       ^SquareKoch:5: error: not found: value squareSide
    squareSide(levels, length);
    ^SquareKoch:5: error: not found: value levels
    squareSide(levels, length);
               ^SquareKoch:5: error: not found: value length
    squareSide(levels, length);
                       ^SquareKoch:8: error: not found: value squareSide
    squareSide(levels, length);
    ^SquareKoch:8: error: not found: value levels
    squareSide(levels, length);
               ^SquareKoch:8: error: not found: value length
    squareSide(levels, length);
                       ^SquareKoch:11: error: not found: value squareSide
    squareSide(levels, length);
    ^SquareKoch:11: error: not found: value levels
    squareSide(levels, length);
               ^SquareKoch:11: error: not found: value length
    squareSide(levels, length);
                       ^SquareKoch:14: error: not found: value void
void squareSide(int levels, double length) {
^SquareKoch:14: error: not found: value int
void squareSide(int levels, double length) {
                ^SquareKoch:14: error: not found: value double
void squareSide(int levels, double length) {
                            ^SquareKoch:15: error: not found: value levels
  if(levels<=0){
     ^SquareKoch:16: error: not found: value length
    forward(length);
            ^SquareKoch:18: error: not found: value snowSide
    snowSide(levels-1,length/4);
    ^SquareKoch:18: error: not found: value levels
    snowSide(levels-1,length/4);
             ^SquareKoch:18: error: not found: value length
    snowSide(levels-1,length/4);
                      ^SquareKoch:20: error: not found: value snowSide
    snowSide(levels-1,length/4);
    ^SquareKoch:20: error: not found: value levels
    snowSide(levels-1,length/4);
             ^SquareKoch:20: error: not found: value length
    snowSide(levels-1,length/4);
                      ^SquareKoch:22: error: not found: value snowSide
    snowSide(levels-1,length/4);
    ^SquareKoch:22: error: not found: value levels
    snowSide(levels-1,length/4);
             ^SquareKoch:22: error: not found: value length
    snowSide(levels-1,length/4);
                      ^SquareKoch:24: error: not found: value snowSide
    snowSide(levels-1,length/4);
    ^SquareKoch:24: error: not found: value levels
    snowSide(levels-1,length/4);
             ^SquareKoch:24: error: not found: value length
    snowSide(levels-1,length/4);
                      ^SquareKoch:30: error: not found: value snowSquare
		snowSquare(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^