recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.code
void snowSquare (int levels, double length) {
    squareSide(levels, length);
    right(90);
    setColor(Color.blue);
    squareSide(levels, length);
    right(90);
    setColor(Color.orange);
    squareSide(levels, length);
    right(90);
    setColor(Color.magenta);
    squareSide(levels, length);
    right(90);
}
void squareSide(int levels, double length) {
  if(levels<=0){
    forward(length);
  }else{
    snowSide(levels-1,length/4);
    left(60);
    snowSide(levels-1,length/4);
    right(120);
    snowSide(levels-1,length/4);
    left(60);
    snowSide(levels-1,length/4);
  }
}